fix: ajuste para usar mutable list